Moving IE scaling code to media query to prevent excess whitespace in top menu mode

--- a/_sass/components/layout.scss
+++ b/_sass/components/layout.scss
@@ -13,6 +13,13 @@
 	.bio {
 		margin-bottom: 50px;
 	}
+
+	// IE fix for sidebar scaling
+	body::after {
+		content: '';
+		height: 100vh;
+		visibility: hidden;
+	}
 }
 
 // Top Menu mode
