--- a/_sass/elements/main.scss
+++ b/_sass/elements/main.scss
@@ -9,12 +9,6 @@ body {
 	font-size: 1.2em;
 	line-height: 1.4;
 }
-// IE fix for sidebar scaling
-body::after{
-	content: '';
-	height: 100vh;
-	visibility: hidden;
-}
 
 // Paragraph and header spacing
 p, h1, h2, h3, h4, h5, h6 {
